--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Wheel NYC</title>
+    <title>Wheel NY</title>
   </head>
   <body>
+    <div class="container">
+      <img src="wheel.jpeg" id="wheelimg">
+      <!-- <div id="title">the wheel ny</div> -->
+    </div>
   </body>
 </html>
