--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <img src="wheel.jpeg" id="wheelimg">
+      <img src="wheelny.gif" id="titleimg">
       <!-- <div id="title">the wheel ny</div> -->
     </div>
   </body>
